--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -5,8 +5,7 @@
         <!-------AVATAR------------->
         <view class="avatar" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/users/tgenaitay');"></view>
         <!-------Name------------->
-          <view class="name">Name 
-          </view>
+          <view class="name">{{name}}</view>
         </view>
         
   <!-----------------MY BOOKINGS---------->
