--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -74,7 +74,7 @@
   <!-----------------MY RESERVATIONS---------->
                 <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
 
-  <view class="card" bindtap='showMachine' data-id="{{machine.id}}">
+  <view class="card" bindtap='requested' data-id="{{machine.id}}">
         <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
           <view class="card-description">
           <!--machine name -->
