fixed booking form

--- a/pages/booking/booking.wxml
+++ b/pages/booking/booking.wxml
@@ -32,9 +32,9 @@
   </form>
 </view>
 
-<view>
+<!-- <view>
   <button class="btn-confirm" bindtap="confirmation">Confirm</button>
-</view>
+</view> -->
 
 
 
