--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -3,7 +3,7 @@
   <!-------TAB BAR------------->
 <view class="avatar-name">
         <!-------AVATAR------------->
-        <view class="avatar" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH5VG9m1ylrb5mUhjEn1O8ct1ZLRou_HqGSiFK0V3wATXEHbF0Uw');"></view>
+        <view class="avatar" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('../../commons/assets/image/bean.jpg');"></view>
         <!-------Name------------->
           <view class="name">{{name}}</view>
         </view>
@@ -29,44 +29,18 @@
           <view class="card-description">
           <!--machine name -->
             <view class="h2">{{machine.name}}</view>
-              <text class="dates">Dates booked for</text>
+              <text class="dates">{{booking.machine.name}}</text>
           </view>
         </view>
           <view class="card-footer">
-            <text class='name'>INFORMATION</text>
+            <text class='name'>Total ${{booking.price}}</text>
             <view class="pending">
-            <text class="status-pending">Pending</text>
+            <text class="status-pending">{{booking.status}}</text>
             </view>
           </view>
       </view>
 
-      <view class="card" bindtap='showMachine' data-id="{{machine.id}}">
-        <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
-          <view class="card-description">
-          <!--machine name -->
-            <view class="h2">{{machine.name}}</view>
-       <text class="dates">Dates booked for</text>
-          </view>
-        </view>
-          <view class="card-footer">
-            <text class='name'>INFORMATION</text>
-            <text class="status-approved">Approved</text>
-          </view>
-      </view>
-
-            <view class="card" bindtap='showMachine' data-id="{{machine.id}}">
-        <view class="card-body" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://picsum.photos/200/300/?random');">
-          <view class="card-description">
-          <!--machine name -->
-            <view class="h2">{{machine.name}}</view>
-        <text class="dates">Dates booked for</text>
-          </view>
-        </view>
-          <view class="card-footer">
-            <text class='name'>INFORMATION</text>
-            <text class="status-denied">Denied</text>
-          </view>
-      </view>
+     
     </view>
   </view>
 
